Enable node roles to be pluggable
This commit introduces the possibility for a plugin to introduce
additional node roles.