@@ -24,6 +24,7 @@ import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.io.stream.Writeable;
+import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.transport.TransportAddress;
 import org.elasticsearch.common.xcontent.ToXContentFragment;
@@ -32,11 +33,14 @@ import org.elasticsearch.node.Node;
 
 import java.io.IOException;
 import java.util.Collections;
-import java.util.EnumSet;
 import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 
 /**
@@ -80,7 +84,6 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
     private final Version version;
     private final Set<Role> roles;
 
-
     /**
      * Creates a new {@link DiscoveryNode}
      * <p>
@@ -95,7 +98,7 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
      * @param version          the version of the node
      */
     public DiscoveryNode(final String id, TransportAddress address, Version version) {
-        this(id, address, Collections.emptyMap(), EnumSet.allOf(Role.class), version);
+        this(id, address, Collections.emptyMap(), Set.of(MasterRole.INSTANCE, DataRole.INSTANCE, IngestRole.INSTANCE), version);
     }
 
     /**
@@ -178,15 +181,15 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
         this.attributes = Collections.unmodifiableMap(attributes);
         //verify that no node roles are being provided as attributes
         Predicate<Map<String, String>> predicate =  (attrs) -> {
-            for (Role role : Role.values()) {
-                assert attrs.containsKey(role.getRoleName()) == false;
+            boolean success = true;
+            for (final Role role : DiscoveryNode.roleNameToPossibleRoles.values()) {
+                success &= attrs.containsKey(role.roleName()) == false;
+                assert success : role.roleName();
             }
-            return true;
+            return success;
         };
-        assert predicate.test(attributes);
-        Set<Role> rolesSet = EnumSet.noneOf(Role.class);
-        rolesSet.addAll(roles);
-        this.roles = Collections.unmodifiableSet(rolesSet);
+        assert predicate.test(attributes) : attributes;
+        this.roles = Set.copyOf(roles);
     }
 
     /** Creates a DiscoveryNode representing the local node. */
@@ -197,18 +200,8 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
     }
 
     /** extract node roles from the given settings */
-    public static Set<Role> getRolesFromSettings(Settings settings) {
-        Set<Role> roles = EnumSet.noneOf(Role.class);
-        if (Node.NODE_INGEST_SETTING.get(settings)) {
-            roles.add(Role.INGEST);
-        }
-        if (Node.NODE_MASTER_SETTING.get(settings)) {
-            roles.add(Role.MASTER);
-        }
-        if (Node.NODE_DATA_SETTING.get(settings)) {
-            roles.add(Role.DATA);
-        }
-        return roles;
+    public static Set<Role> getRolesFromSettings(final Settings settings) {
+        return roleNameToPossibleRoles.values().stream().filter(s -> s.roleSetting().get(settings)).collect(Collectors.toUnmodifiableSet());
     }
 
     /**
@@ -229,10 +222,41 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
             this.attributes.put(in.readString(), in.readString());
         }
         int rolesSize = in.readVInt();
-        this.roles = EnumSet.noneOf(Role.class);
-        for (int i = 0; i < rolesSize; i++) {
-            this.roles.add(in.readEnum(Role.class));
+        final Set<Role> roles = new HashSet<>(rolesSize);
+        if (in.getVersion().onOrAfter(Version.V_8_0_0)) {
+            for (int i = 0; i < rolesSize; i++) {
+                final String roleName = in.readString();
+                final String roleNameAbbreviation = in.readString();
+                final Role role = roleNameToPossibleRoles.get(roleName);
+                if (role == null) {
+                    roles.add(new UnknownRole(roleName, roleNameAbbreviation));
+                } else {
+                    assert roleName.equals(role.roleName()) : "role name [" + roleName + "] does not match role [" + role.roleName() + "]";
+                    assert roleNameAbbreviation.equals(role.roleNameAbbreviation())
+                            : "role name abbreviation [" + roleName + "] does not match role [" + role.roleNameAbbreviation() + "]";
+                    roles.add(role);
+                }
+            }
+        } else {
+            // an old node will only send us legacy roles since pluggable roles is a new concept
+            for (int i = 0; i < rolesSize; i++) {
+                final LegacyRole legacyRole = in.readEnum(LegacyRole.class);
+                switch (legacyRole) {
+                    case MASTER:
+                        roles.add(MasterRole.INSTANCE);
+                        break;
+                    case DATA:
+                        roles.add(DataRole.INSTANCE);
+                        break;
+                    case INGEST:
+                        roles.add(IngestRole.INSTANCE);
+                        break;
+                    default:
+                        throw new AssertionError(legacyRole.roleName());
+                }
+            }
         }
+        this.roles = Set.copyOf(roles);
         this.version = Version.readVersion(in);
     }
 
@@ -249,9 +273,25 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
             out.writeString(entry.getKey());
             out.writeString(entry.getValue());
         }
-        out.writeVInt(roles.size());
-        for (Role role : roles) {
-            out.writeEnum(role);
+        if (out.getVersion().onOrAfter(Version.V_8_0_0)) {
+            out.writeVInt(roles.size());
+            for (final Role role : roles) {
+                out.writeString(role.roleName());
+                out.writeString(role.roleNameAbbreviation());
+            }
+        } else {
+            // an old node will only understand legacy roles since pluggable roles is a new concept
+            final List<Role> rolesToWrite = roles.stream().filter(BUILT_IN_ROLES::contains).collect(Collectors.toUnmodifiableList());
+            out.writeVInt(rolesToWrite.size());
+            for (final Role role : rolesToWrite) {
+                if (role == MasterRole.INSTANCE) {
+                    out.writeEnum(LegacyRole.MASTER);
+                } else if (role == DataRole.INSTANCE) {
+                    out.writeEnum(LegacyRole.DATA);
+                } else if (role == IngestRole.INSTANCE) {
+                    out.writeEnum(LegacyRole.INGEST);
+                }
+            }
         }
         Version.writeVersion(version, out);
     }
@@ -299,21 +339,21 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
      * Should this node hold data (shards) or not.
      */
     public boolean isDataNode() {
-        return roles.contains(Role.DATA);
+        return roles.contains(DataRole.INSTANCE);
     }
 
     /**
      * Can this node become master or not.
      */
     public boolean isMasterNode() {
-        return roles.contains(Role.MASTER);
+        return roles.contains(MasterRole.INSTANCE);
     }
 
     /**
      * Returns a boolean that tells whether this an ingest node or not
      */
     public boolean isIngestNode() {
-        return roles.contains(Role.INGEST);
+        return roles.contains(IngestRole.INSTANCE);
     }
 
     /**
@@ -391,29 +431,131 @@ public class DiscoveryNode implements Writeable, ToXContentFragment {
         return builder;
     }
 
+    public static Set<Role> BUILT_IN_ROLES = Set.of(MasterRole.INSTANCE, DataRole.INSTANCE, IngestRole.INSTANCE);
+    private static Map<String, Role> roleNameToPossibleRoles;
+
+    public static void setPossibleRoles(final Set<Role> possibleRoles) {
+        final Map<String, Role> roleNameToPossibleRoles =
+                possibleRoles.stream().collect(Collectors.toUnmodifiableMap(Role::roleName, Function.identity()));
+        // collect the abbreviation names into a map to ensure that there are not any duplicate abbreviations
+        final Map<String, Role> roleNameAbbreviationToPossibleRoles = roleNameToPossibleRoles.values()
+                .stream()
+                .collect(Collectors.toUnmodifiableMap(Role::roleNameAbbreviation, Function.identity()));
+        assert roleNameToPossibleRoles.size() == roleNameAbbreviationToPossibleRoles.size() :
+                "roles by name [" + roleNameToPossibleRoles + "], roles by name abbreviation [" + roleNameAbbreviationToPossibleRoles + "]";
+        DiscoveryNode.roleNameToPossibleRoles = roleNameToPossibleRoles;
+    }
+
+    public abstract static class Role {
+
+        private final String roleName;
+
+        public String roleName() {
+            return roleName;
+        }
+
+        private final String roleNameAbbreviation;
+
+        public String roleNameAbbreviation() {
+            return roleNameAbbreviation;
+        }
+
+        protected Role(final String roleName, final String roleNameAbbreviation) {
+            this.roleName = roleName;
+            this.roleNameAbbreviation = roleNameAbbreviation;
+        }
+
+        protected abstract Setting<Boolean> roleSetting();
+
+        @Override
+        public String toString() {
+            return "Role{" +
+                    "roleName='" + roleName + '\'' +
+                    ", roleNameAbbreviation='" + roleNameAbbreviation + '\'' +
+                    '}';
+        }
+
+    }
+
+    public static class MasterRole extends Role {
+
+        public static final MasterRole INSTANCE = new MasterRole();
+
+        private MasterRole() {
+            super("master", "m");
+        }
+
+        @Override
+        protected Setting<Boolean> roleSetting() {
+            return Node.NODE_MASTER_SETTING;
+        }
+
+    }
+
+    public static class DataRole extends Role {
+
+        public static final DataRole INSTANCE = new DataRole();
+
+        private DataRole() {
+            super("data", "d");
+        }
+
+        @Override
+        protected Setting<Boolean> roleSetting() {
+            return Node.NODE_DATA_SETTING;
+        }
+
+    }
+
+    public static class IngestRole extends Role {
+
+        public static final IngestRole INSTANCE = new IngestRole();
+
+        private IngestRole() {
+            super("ingest", "i");
+        }
+
+        @Override
+        protected Setting<Boolean> roleSetting() {
+            return Node.NODE_INGEST_SETTING;
+        }
+
+    }
+
+    private static class UnknownRole extends Role {
+
+        private UnknownRole(final String roleName, final String roleNameAbbreviation) {
+            super(roleName, roleNameAbbreviation);
+        }
+
+        @Override
+        protected Setting<Boolean> roleSetting() {
+            // since this setting is not registered, it will always return false when testing if the local node has the role
+            assert false;
+            return Setting.boolSetting("node. " + roleName(), false, Setting.Property.NodeScope);
+        }
+
+    }
+
     /**
      * Enum that holds all the possible roles that that a node can fulfill in a cluster.
      * Each role has its name and a corresponding abbreviation used by cat apis.
      */
-    public enum Role {
-        MASTER("master", "m"),
-        DATA("data", "d"),
-        INGEST("ingest", "i");
+    private enum LegacyRole {
+        MASTER("master"),
+        DATA("data"),
+        INGEST("ingest");
 
         private final String roleName;
-        private final String abbreviation;
 
-        Role(String roleName, String abbreviation) {
+        LegacyRole(final String roleName) {
             this.roleName = roleName;
-            this.abbreviation = abbreviation;
         }
 
-        public String getRoleName() {
+        public String roleName() {
             return roleName;
         }
 
-        public String getAbbreviation() {
-            return abbreviation;
-        }
     }
+
 }
